# aitaem

./: .gitignore  404.html  ARCHITECTURE.md  CLAUDE.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
agent/building-your-own-bot/: index.html
agent/evaluating-your-agent/: index.html
agent/getting-started/: index.html
agent/stability/: index.html
aitaem/: __init__.py  insights.py
aitaem/agent/: __init__.py  _base.py  _history.py  _response.py  _trace.py  base.py  definition_bot.py  definition_tools.py  definition_types.py  history.py  query_bot.py  query_tools.py  query_types.py  resolver.py  response.py  store.py  trace.py
aitaem/connectors/: README.md  __init__.py  backend_specs.py  base.py  connection.py  ibis_connector.py
aitaem/helpers/: __init__.py  csv_to_duckdb.py
aitaem/query/: __init__.py  builder.py  executor.py
aitaem/specs/: README.md  __init__.py  compatibility.py  loader.py  metric.py  segment.py  slice.py
aitaem/utils/: __init__.py  csv_to_duckdb.py  exceptions.py  formatting.py  validation.py  yaml_validation.py
api/: index.html
api/agent/: index.html
api/connectors/: index.html
api/helpers/: index.html
api/insights/: index.html
api/specs/: index.html
changelog/: index.html
docs/: changelog.md  getting-started.md  index.md  license.md  use-cases.md
docs/agent/: building-your-own-bot.md  evaluating-your-agent.md  getting-started.md  stability.md
docs/api/: agent.md  connectors.md  helpers.md  index.md  insights.md  specs.md
docs/user-guide/: computing-metrics.md  connectors.md  specs.md
examples/: 01_definition_bot_example.ipynb  01_definition_bot_example.py  02_query_bot_example.ipynb  02_query_bot_example.py  03_intent_resolution_example.ipynb  03_intent_resolution_example.py  04_evaluating_agents_example.ipynb  04_evaluating_agents_example.py  README.md  connections.template.yaml  connections.yaml  definition_bot_example.ipynb  definition_bot_example.py  intent_resolution_example.ipynb  intent_resolution_example.py  query_bot_example.ipynb  query_bot_example.py
examples/data/: ad_campaigns.csv  setup_db.py
examples/metrics/: avg_revenue.yaml  campaign_count.yaml  cpa.yaml  cpc.yaml  ctr.yaml  homepage_ctr.yaml  max_revenue.yaml  roas.yaml  total_revenue.yaml
examples/segments/: customer_value_tier.yaml  platform.yaml
examples/slices/: campaign_type.yaml  geo.yaml  geography.yaml  industry.yaml
getting-started/: index.html
license/: index.html
plans/: 01-connector-module.md  02-specs-module.md  03-query-module.md  04-refactor-no-globals.md  05-insights-module.md  06-pypi-setup.md  07-docs-github-pages.md  08-period-granularity.md  09-postgres-backend.md  10-by-entity-metrics.md  11-remove-aggregation-field.md  12-wildcard-slices.md  13-bugfix-yaml-specs-path-max.md  14-docs-gaps-and-usecases.md  15-consumer-api-improvements.md  16-r3-sql-identifier-validation.md  17-r5-r7-r9-top-level-exports.md  18-metric-format-and-hourly.md  19-spec-validation-column-extraction.md  20-segment-spec-entity-dim-join.md  21-spec-scan.md  22-lazy-metric-compute.md  23-agent-phase1.md  24-agent-phase2.md  25-tmp-dir-to-connection-manager.md  26-querybot-v0.2.md  27-agent-phase3.md  28-agent-phase5.2-composition.md  29-agent-phase6-evals.md  30-reconcile-metriccompute-lifecycle-docs.md  31-compute-metrics-token-retry.md  32-agent-phase7-docs-and-release.md  REQ01-api-improvement-requests.md
plans/agent_module/: 01-goals-non-goals.md  02-architectural-decisions.md  03-component-architecture.md  04-aitaem-contracts.md  05-evals.md  06-extensibility.md  07-non-decisions.md  08-implementation-order.md  09-querybot-v0.2-design.md  ARCHITECTURE.md  phase1-foundations.md
scripts/: check_import_graph.py
search/: search_index.json
tests/: conftest.py  test_insights.py  test_insights_by_entity.py  test_insights_metric_format.py  test_insights_period_granularity.py  test_public_api.py
tests/evals/: _fixtures.py  test_definition_bot_evals.py  test_query_bot_evals.py
tests/test_agent/: test_composition.py  test_definition_bot.py  test_definition_tools.py  test_definition_types.py  test_history.py  test_otel_spans.py  test_primitives.py  test_public_api.py  test_query_bot.py  test_query_bot_smoke.py  test_query_tools.py  test_query_types.py  test_resolver.py  test_result_id_contract.py  test_store.py  test_trace.py
tests/test_connectors/: __init__.py  test_backend_specs.py  test_bigquery_integration.py  test_connection_manager.py  test_ibis_connector.py  test_list_tables.py  test_postgres_integration.py
tests/test_query/: test_builder.py  test_builder_period_granularity.py  test_executor.py
tests/test_specs/: conftest.py  test_compatibility.py  test_metric_spec.py  test_segment_spec.py  test_slice_spec.py  test_spec_loader.py
tests/test_utils/: test_column_extraction.py  (+3 more)
use-cases/: index.html
(+15 files in other folders)
