[project]
name = "aitaem"
version = "0.1.5"
description = "AITÆM: All Interesting Things Are Essentially Metrics - A Python library for generating data insights"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Namit Chaturvedi", email = "22843902+chaturv3di@users.noreply.github.com"},
]
keywords = ["metrics", "analytics", "OLAP", "data", "insights", "ibis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "ibis-framework[duckdb]>=9.0.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
bigquery = [
    "ibis-framework[bigquery]>=9.0.0",
    "google-cloud-bigquery>=3.0.0",
]
postgres = [
    "ibis-framework[postgres]>=9.0.0",
    "psycopg[binary]>=3.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "build>=1.0.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-autorefs>=1.2",
]
all = ["aitaem[bigquery,postgres,dev,docs]"]

[project.urls]
Homepage = "https://github.com/chaturv3di/aitaem"
Repository = "https://github.com/chaturv3di/aitaem"
Issues = "https://github.com/chaturv3di/aitaem/issues"
Documentation = "https://chaturv3di.github.io/aitaem"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require real external resources)",
]
# By default, skip integration tests unless explicitly requested
addopts = "-m 'not integration'"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.ruff]
line-length = 100
